--- a/src/index.html
+++ b/src/index.html
@@ -49,15 +49,21 @@
 <script>
   const cpuUsageGraph = document.getElementById('cpuUsageGraph');
 
+  const cpus = [];
+  const threads = {{threads}}; // Switch to static int when using off pico
+  for (var thread = 0; thread < threads; thread++) {
+    cpus.push({
+      label: "CPU" + thread,
+      data: [],
+      fill: true
+    });
+  }
+
   new Chart(cpuUsageGraph, {
     type: 'line',
     data: {
       labels: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10'],
-      datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
-        borderWidth: 1
-      }]
+      datasets: cpus
     },
     options: {
       scales: {
