Enhanced README. Re-enabled WebSockets

--- a/piMI/index.html
+++ b/piMI/index.html
@@ -171,7 +171,7 @@
 
 <script>
   // Establish WS
-  // var ws = new WebSocket("ws://" + location.hostname); // Possibly update to wss:// later
+  var ws = new WebSocket("ws://" + location.hostname); // Possibly update to wss:// later
 
   const cpus = [];
   const threads = 12; // Switch to static int when using off pico
